# notesieves

./: README.md  config.yaml  pyproject.toml
data/chroma/: chroma.sqlite3
data/chroma/19fb73f6-f0a9-40ed-a9a2-33a7bd14fa53/: index_metadata.pickle
data/chroma/295911f2-35b9-429d-85eb-6450b41d3bc3/: index_metadata.pickle
data/chroma/7246aeda-3841-4e0f-80d2-99ad790418ad/: index_metadata.pickle
data/test_notes/: sample.md
src/notesieves/: chunker.py  cli.py  config.py  embeddings.py  ingest.py  llm.py  prompts.py  query.py  vectorstore.py
